--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 <style>
+
 body {
   font-family: times, sans-serif;
   margin: 0 auto;
@@ -42,12 +43,12 @@ p {
   -moz-transition: height .5s;
 }
 img {
-  max-width: 100%;
+  max-width: auto;
   max-height: auto;
 }
 
 .show-description p {
-  height: 150px;
+  height: 300px;
 }
 
 .show-description small {
@@ -55,12 +56,20 @@ img {
 }
 
 .first{
+    background-size: contain;
+    background-position: center;
   background-image: url("https://scontent-hou1-1.xx.fbcdn.net/v/t1.6435-9/51692396_10213717965644275_282033648876650496_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=174925&_nc_ohc=pEyxExrcj90AX_LAE_H&_nc_ht=scontent-hou1-1.xx&oh=00_AT8_5YAJxaD2UKUHeteI42_8dnfKBijqWxE45peClZNZnA&oe=631A7826");
 }
 .second{
+    background-size: contain;
+    background-position: center;
   background-image: url("https://scontent-hou1-1.xx.fbcdn.net/v/t39.30808-6/271436809_10221179598100423_4113787620130394107_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=XFQ-5KHi6vkAX80oToh&_nc_ht=scontent-hou1-1.xx&oh=00_AT-rQrdZlnii3k6d0aQJrkFFzqNJRuGmur_rfcDaiuMXhA&oe=62FA267C");
 }
-
+.third{
+    background-size: contain;
+    background-position: 0%;
+    background-image: url("https://mail.google.com/mail/u/0?ui=2&ik=715837b0c7&attid=0.2&permmsgid=msg-f:1732326993004073306&th=180a7638ccd4115a&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9AqS9N3K-zZdb7W1kIO6QiC0u4lb8dZap7Fryi-a5JsAJdbUeGBFCqnwnEwfpHwxTqqVG28KJcoaAlFyTtpEkoG0UMy08EWsY01I9PtqOh1Kp92r1TqmKSk_8&disp=emb");
+}
 .Info {
   float: right;
 }
